--- a/hbase-gui/pom.xml
+++ b/hbase-gui/pom.xml
@@ -3,21 +3,21 @@
   <groupId>com.lm.</groupId>
   <artifactId>hbase-core</artifactId>
   <version>1.2.3</version>
-  
-  <repositories>  
-    <repository>  
-      <id>BeaTunes</id>  
-      <name>BeaTunes Mirror</name>  
-      <url>https://www.beatunes.com/repo/maven2/</url>  
-      <releases>  
-        <enabled>true</enabled>  
-      </releases>  
-      <snapshots>  
-        <enabled>false</enabled>  
-      </snapshots>  
-    </repository>  
-  </repositories>  
-  
+
+  <repositories>
+    <repository>
+      <id>BeaTunes</id>
+      <name>BeaTunes Mirror</name>
+      <url>https://www.beatunes.com/repo/maven2/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
    <build>
         <finalName>Hbase-GUI</finalName>
             <plugins>
@@ -32,28 +32,28 @@
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
-                 <plugin>  
-	            <groupId>org.apache.maven.plugins</groupId>  
-	            <artifactId>maven-jar-plugin</artifactId>  
-	            <version>2.3.2</version>  
-	            <configuration>  
-	                <archive>  
-	                    <manifest>  
-	                        <!--change addClasspath to true if daks is desktop version-->  
-	                        <addClasspath>true</addClasspath>  
-	                        <classpathPrefix>jars/</classpathPrefix>  
-	                        <mainClass>com.lm.hbase.swing.HbaseGui</mainClass>  
-	                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>  
-	                        <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>  
-	                    </manifest>  
+                 <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-jar-plugin</artifactId>
+	            <version>2.3.2</version>
+	            <configuration>
+	                <archive>
+	                    <manifest>
+	                        <!--change addClasspath to true if daks is desktop version-->
+	                        <addClasspath>true</addClasspath>
+	                        <classpathPrefix>jars/</classpathPrefix>
+	                        <mainClass>com.lm.hbase.swing.HbaseGui</mainClass>
+	                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+	                        <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+	                    </manifest>
 	                    <manifestEntries>
 	                        <Permissions>${Permissions}</Permissions>
 	                        <Caller-Allowable-Codebase>${Caller-Allowable-Codebase}</Caller-Allowable-Codebase>
 	                    </manifestEntries>
-	                </archive>  
-	            </configuration>  
-	        </plugin> 
-			
+	                </archive>
+	            </configuration>
+	        </plugin>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>appassembler-maven-plugin</artifactId>
@@ -67,7 +67,7 @@
 				    </goals>
 				  </execution>
 				</executions>
-				
+
 				<configuration>
 				  <!--lib下直接存放jar，没有路径文件夹（如com/apache)，如果没有这个选项则放在lib下的jar包会被com/apache类似的多层文件夹包裹起来-->
 				  <repositoryLayout>flat</repositoryLayout>
@@ -97,10 +97,11 @@
 				  </programs>
 				</configuration>
 				</plugin>
-		      
+
 		       <plugin>
 				    <groupId>org.apache.maven.plugins</groupId>
 				    <artifactId>maven-resources-plugin</artifactId>
+				   	<version>2.6</version>
 				    <executions>
 				        <execution>
 				            <id>copy-img</id>
@@ -177,10 +178,18 @@
 				    </executions>
 				</plugin>
             </plugins>
+	   <resources>
+		   <resource>
+			   <directory>conf</directory>
+			   <includes>
+				   <include>**/*.properties</include>
+			   </includes>
+		   </resource>
+	   </resources>
     </build>
-  
-  
-  
+
+
+
     <dependencies>
    <dependency>
        <groupId>com.alibaba</groupId>
@@ -193,7 +202,7 @@
 	    <artifactId>jgoodies-common</artifactId>
 	    <version>1.8.1</version>
 	</dependency>
-  
+
     <dependency>
 	    <groupId>com.jgoodies</groupId>
 	    <artifactId>jgoodies-forms</artifactId>
@@ -205,24 +214,24 @@
 	    <artifactId>maven-invoker</artifactId>
 	    <version>3.0.1</version>
 	</dependency>
-	
+
 	<dependency>
 	    <groupId>com.bulenkov</groupId>
 	    <artifactId>darcula</artifactId>
 	    <version>0.9.2</version>
 	</dependency>
-	
+
 	<dependency>
 	    <groupId>com.lm</groupId>
 	    <artifactId>hbase-core-adapter-entity</artifactId>
 	    <version>1.1.0</version>
-	</dependency>	
-	
+	</dependency>
+
 	<dependency>
 	    <groupId>org.xeustechnologies</groupId>
 	    <artifactId>jcl-core</artifactId>
 	    <version>2.8</version>
 	</dependency>
-	  
+
   </dependencies>
 </project>
